# CashGuard

./: CMakeLists.txt
dependencies/: csv.h
dependencies/imgui/: imgui_widgets.cpp
dependencies/implot/: implot.cpp
dependencies/portable-file-dialogs/: VERSION.txt
include/: account_dialog.hpp  account_dialog_ui.hpp  account_model.hpp  application.hpp  category_model.hpp  cg_file_handler.hpp  diagrams.hpp  dialogs.hpp  graphs.hpp  inputs.hpp  mainwindow.hpp  mainwindow_ui.hpp  qt_util.hpp  small_total_amount_chart.hpp  table_style_delegate.hpp  tooltip_chart_view.hpp  total_amount.hpp  total_amount_chart.hpp  total_amount_chart_view.hpp  transaction.hpp  transaction_dialog.hpp  transaction_file_handler.hpp  transaction_filter.hpp  transaction_filter_dialog.hpp  transaction_group_dialog.hpp  transaction_model.hpp  transaction_page.hpp  transaction_table.hpp  transaction_table_style_delegate.hpp  ui.hpp  validation.hpp  visualizations.hpp  window.hpp
include/fonts/: Roboto_Medium.h
include/transaction/: transaction_dialog.hpp  transaction_dialog_ui.hpp  transaction_group_dialog_ui.hpp
include/transaction_filter/: transaction_filter.hpp  transaction_filter_window.hpp  transaction_filter_window_ui.hpp
include/transaction_filter_ui/: transaction_filter.hpp  transaction_filter_ui.hpp  transaction_filter_window.hpp
include/transaction_ui/: transaction_dialog.hpp  transaction_group_dialog.hpp  transaction_group_dialog_ui.hpp
include/util/: color.hpp  log.hpp  random_generator.hpp  timer.hpp  utils.hpp
include/utils/: log.hpp
qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.hpp  transaction_dialog.cpp  transaction_dialog.h  transaction_filter_dialog.cpp  transaction_filter_dialog.h  transaction_group_dialog.cpp  transaction_group_dialog.h  transaction_group_dialog.ui  transactiondialog.cpp  transactiondialog.h
src/: account_dialog.cpp  account_model.cpp  application.cpp  category_model.cpp  cg_file_handler.cpp  diagrams.cpp  dialogs.cpp  graphs.cpp  inputs.cpp  main.cpp  mainwindow.cpp  mainwindow_ui.cpp  small_total_amount_chart.cpp  table_style_delegate.cpp  tooltip_chart_view.cpp  total_amount.cpp  total_amount_chart.cpp  total_amount_chart_view.cpp  transaction.cpp  transaction_dialog.cpp  transaction_file_handler.cpp  transaction_filter.cpp  transaction_filter_dialog.cpp  transaction_group_dialog.cpp  transaction_model.cpp  transaction_page.cpp  transaction_table.cpp  transaction_table_style_delegate.cpp  ui.cpp  validation.cpp  visualizations.cpp  window.cpp
src/transaction/: transaction_dialog.cpp  transaction_dialog_ui.cpp  transaction_group_dialog.cpp  transaction_group_dialog_ui.cpp
src/transaction_filter/: transaction_filter.cpp  transaction_filter_window.cpp  transaction_filter_window_ui.cpp
src/transaction_filter_ui/: transaction_filter.cpp  transaction_filter_window.cpp
src/transaction_ui/: transaction_dialog.cpp  transaction_group_dialog.cpp
src/util/: color.cpp  random_generator.cpp
